sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:9: error: not found: value x
    while( j > 0 & getValue(j - 1) > x){
                                     ^